--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,20 @@
 {
-  "name": "moocky/rememberable",
-  "description": "Query caching for Laravel",
-  "keywords": [
-    "laravel",
-    "eloquent",
-    "caching",
-    "remember"
-  ],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Moocky",
-      "email": "moocky@moocky.net"
-    }
-  ],
-  "require": {
-    "php": "^7.2.5|^8.0",
-    "illuminate/database": "^7.0",
-    "illuminate/support": "^7.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Moocky\\Rememberable\\": "src/"
-    }
-  }
+	"name": "moocky/aliyunsms",
+	"description": "基于alibabacloud/dysmsapi-20180501接入laravel",
+	"type": "library",
+	"require": {
+		"php": ">5.5",
+		"alibabacloud/dysmsapi-20170525": "^1.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"Moocky\\Aliyunsms\\": "src/"
+		}
+	},
+	"authors": [
+		{
+			"name": "moocky",
+			"email": "moocky@moocky.net"
+		}
+	]
 }
