--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name": "moocky/aliyunsms",
 	"description": "基于alibabacloud/dysmsapi-20170525 接入短信服务",
+  "keywords": ["php", "laravel", "lumen", "sms", "aliyunsms", "dysmsapi", "alibabacloud"],
 	"type": "library",
 	"require": {
 		"php": ">5.5",
@@ -18,5 +19,5 @@
 		}
 	],
 	"prefer-stable": true,
-	"minimum-stability": "dev"
+	"minimum-stability": "stable"
 }
