--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	"extra": {
 		"laravel": {
 			"providers": [
-				"Moocky\Aliyunsms\Providers\LaravelServiceProvider"
+				"Moocky\\Aliyunsms\\Providers\\LaravelServiceProvider"
 			]
 		}
 	},
